--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="title_label">Title:</string>
     <string name="backbutton">backButton</string>
     <string name="task_content_hint">Task content</string>
+    <string name="user_id">User Id:</string>
 </resources>
